# 6.S081

./: CMakeLists.txt  Makefile  answers-pgtbl.txt  answers-thread.txt  answers-traps.txt
kernel/: .file.c.swp  .fs.c.swp  .printf.c.swp  .proc.c.swp  .proc.h.swp  .sysfile.c.swp  .sysproc.c.swp  .trap.c.swp  bio.c  buf.h  defs.h  e1000.c  exec.c  fs.h  kalloc.c  printf.c  proc.c  proc.h  syscall.c  sysfile.c  sysproc.c  temp.c  trap.c  vm.c
notxv6/: .ph.c.swp  barrier.c  ph.c
user/: .init.c.swp  .initcode.S.swp  .sysinfotest.c.swp  .xargstest.sh.swp  find.c  pingpong.c  primes.c  sleep.c  temp2  uthread.c  uthread_switch.S  xargs.c
