cmake_minimum_required(VERSION 3.21)
project(xv6_labs_2021 C)

set(CMAKE_C_STANDARD 11)

include_directories(kernel)
include_directories(user)
include_directories(xv6_labs/kernel)
include_directories(xv6_labs/user)

add_executable(xv6_labs_2021
        kernel/bio.c
        kernel/buf.h
        kernel/console.c
        kernel/date.h
        kernel/defs.h
        kernel/elf.h
        kernel/exec.c
        kernel/fcntl.h
        kernel/file.c
        kernel/file.h
        kernel/fs.c
        kernel/fs.h
        kernel/kalloc.c
        kernel/log.c
        kernel/main.c
        kernel/memlayout.h
        kernel/param.h
        kernel/pipe.c
        kernel/plic.c
        kernel/printf.c
        kernel/proc.c
        kernel/proc.h
        kernel/ramdisk.c
        kernel/riscv.h
        kernel/sleeplock.c
        kernel/sleeplock.h
        kernel/spinlock.c
        kernel/spinlock.h
        kernel/start.c
        kernel/stat.h
        kernel/string.c
        kernel/syscall.c
        kernel/syscall.h
        kernel/sysfile.c
        kernel/sysproc.c
        kernel/trap.c
        kernel/types.h
        kernel/uart.c
        kernel/virtio.h
        kernel/virtio_disk.c
        kernel/vm.c
        mkfs/mkfs.c
        user/cat.c
        user/echo.c
        user/forktest.c
        user/grep.c
        user/grind.c
        user/init.c
        user/kill.c
        user/ln.c
        user/ls.c
        user/mkdir.c
        user/pingpong.c
        user/printf.c
        user/rm.c
        user/sh.c
        user/sleep.c
        user/stressfs.c
        user/ulib.c
        user/umalloc.c
        user/user.h
        user/usertests.c
        user/wc.c
        user/zombie.c
        xv6_labs/kernel/bio.c
        xv6_labs/kernel/buf.h
        xv6_labs/kernel/console.c
        xv6_labs/kernel/date.h
        xv6_labs/kernel/defs.h
        xv6_labs/kernel/elf.h
        xv6_labs/kernel/exec.c
        xv6_labs/kernel/fcntl.h
        xv6_labs/kernel/file.c
        xv6_labs/kernel/file.h
        xv6_labs/kernel/fs.c
        xv6_labs/kernel/fs.h
        xv6_labs/kernel/kalloc.c
        xv6_labs/kernel/log.c
        xv6_labs/kernel/main.c
        xv6_labs/kernel/memlayout.h
        xv6_labs/kernel/param.h
        xv6_labs/kernel/pipe.c
        xv6_labs/kernel/plic.c
        xv6_labs/kernel/printf.c
        xv6_labs/kernel/proc.c
        xv6_labs/kernel/proc.h
        xv6_labs/kernel/ramdisk.c
        xv6_labs/kernel/riscv.h
        xv6_labs/kernel/sleeplock.c
        xv6_labs/kernel/sleeplock.h
        xv6_labs/kernel/spinlock.c
        xv6_labs/kernel/spinlock.h
        xv6_labs/kernel/start.c
        xv6_labs/kernel/stat.h
        xv6_labs/kernel/string.c
        xv6_labs/kernel/syscall.c
        xv6_labs/kernel/syscall.h
        xv6_labs/kernel/sysfile.c
        xv6_labs/kernel/sysproc.c
        xv6_labs/kernel/trap.c
        xv6_labs/kernel/types.h
        xv6_labs/kernel/uart.c
        xv6_labs/kernel/virtio.h
        xv6_labs/kernel/virtio_disk.c
        xv6_labs/kernel/vm.c
        xv6_labs/mkfs/mkfs.c
        xv6_labs/user/cat.c
        xv6_labs/user/echo.c
        xv6_labs/user/forktest.c
        xv6_labs/user/grep.c
        xv6_labs/user/grind.c
        xv6_labs/user/init.c
        xv6_labs/user/kill.c
        xv6_labs/user/ln.c
        xv6_labs/user/ls.c
        xv6_labs/user/mkdir.c
        xv6_labs/user/printf.c
        xv6_labs/user/rm.c
        xv6_labs/user/sh.c
        xv6_labs/user/stressfs.c
        xv6_labs/user/ulib.c
        xv6_labs/user/umalloc.c
        xv6_labs/user/user.h
        xv6_labs/user/usertests.c
        xv6_labs/user/wc.c
        xv6_labs/user/zombie.c)
